# ComfyUI_RS_NAI_Local_Prompt_converter

./: ReadMe.md  __init__.py  c2n_converter.py  nodes.py  publish.yml  pyproject.toml
.github/workflows/: publish.yml
js/: naiPromptExtractor.js
